--- a/index.html
+++ b/index.html
@@ -97,12 +97,15 @@
 <div class="container container-3d">
   <h3><strong>About Me</strong></h3>
   <p style="text-align: justify;">
-    I am a motivated and adaptable individual with a strong foundation in IT and a passion for creative and detail-oriented work. I have over 1 year of experience as a Graphic Designer at Adnsign Advertising, where I developed visual content that aligned with client needs and branding goals. Currently, I work as a Payment Officer at Port City BPO, where I handle financial processes with accuracy, efficiency, and integrity.
-    <br><br>
+    I am a motivated and adaptable individual with a strong foundation in IT and a passion for creative and detail-oriented work. I have over one year of experience as a Graphic Designer at Adnsign Advertising, where I created visual content that aligned with client requirements and branding objectives.<br><br>
     With academic training in IT and hands-on experience in both creative and operational roles, I bring a versatile skill set to any team. Known for being a smart worker and a positive, team-oriented person, I take pride in my ability to learn quickly, adapt to challenges, and contribute meaningfully to organizational goals.
     <br><br>
-    I'm always looking to grow, take on new responsibilities, and make a positive impact wherever I work.
-  </p>
+    After gaining six months of experience as a Payment Executive at Port City BPO, handling financial processes with accuracy, efficiency, and integrity, I am currently working at Red Creatic Maldives as a Digital Sales and Marketing Executive. In this role, I manage digital promotions, customer communication, and marketing activities to support business growth. I also possess working knowledge of ERP systems, which helps me efficiently manage data, records, and operational workflows.
+  <br><br>
+    With academic training in IT and hands-on experience in creative, operational, and marketing roles, I bring a versatile skill set to any team. I am known as a smart worker and a positive, team-oriented individual who learns quickly, adapts to challenges, and contributes meaningfully to organizational goals.
+<br><br>
+  I am always eager to grow professionally, take on new responsibilities, and make a positive impact wherever I work.
+</p>
 </div>
 
 <!-- Social Media Icons -->
