--- a/experience.html
+++ b/experience.html
@@ -128,9 +128,9 @@
 <div class="bg-3d-elements" id="bg3dElements"></div>
 
 <nav>
-  <a href="index.html">Home</a>
+  <a href="index.html" >Home</a>
   <a href="education.html" >Education</a>
-  <a href="experience.html">Experience</a>
+  <a href="experience.html" class="active">Experience</a>
   <a href="skills.html">Skills</a>
   <a href="contact.html">Contact</a>
   <a href="My Projects.html">My Projects</a>
@@ -139,6 +139,45 @@
 
   <div class="container container-3d">
   <h1 class="page-title-3d">Work Experience</h1>
+
+  <!-- Red Creative -->
+<div class="experience-container">
+  <div class="experience-card experience-card-3d">
+    <div class="experience-header experience-header-3d">
+      <h2 class="experience-title experience-title-3d">
+        Red Creative
+        <span class="role-badge-3d">Digital Sales & Marketing Executive</span>
+      </h2>
+      <img src="./Files/redcreative.png" alt="Red Creative" class="company-logo company-logo-3d" />
+    </div>
+
+    <p class="experience-period experience-period-3d">2026 – Present</p>
+
+    <div class="experience-details experience-details-3d">
+      <ul>
+        <li>Working as a Digital Sales & Marketing Executive in Maldives remembers.</li>
+        <li>Responsible for managing online promotions, social media campaigns, and customer engagement strategies to improve brand visibility and sales performance.</li>
+      </ul>
+
+      <div class="responsibilities responsibilities-3d">
+        <h4><i class="fas fa-tasks"></i> Key Duties:</h4>
+        <ul>
+          <li>Plan and execute social media marketing campaigns (Facebook, Viber, WhatsApp)</li>
+          <li>Create promotional posters, digital advertisements, and marketing content</li>
+          <li>Respond to customer inquiries and convert leads into sales</li>
+          <li>Monitor campaign performance and analyze engagement insights</li>
+          <li>Coordinate with designers and clients for branding and marketing strategies</li>
+          <li>Assist with website promotion, basic SEO, and online visibility improvement</li>
+        </ul>
+      </div>
+
+      <a href="https://share.google/bZmVGbUueemQ9Dpao" target="_blank" class="location-link location-link-3d">
+        <i class="fas fa-map-marker-alt"></i> Maldives, HuluhuMale'
+      </a>
+    </div>
+  </div>
+</div>
+
 
   
     <!-- Makeen -->
@@ -151,7 +190,7 @@
         </h2>
         <img src="./Files/makeen books.png" alt="Makeen Books" class="company-logo company-logo-3d" />
       </div>
-      <p class="experience-period experience-period-3d">2025 – Present</p>
+      <p class="experience-period experience-period-3d">2025</p>
       <div class="experience-details experience-details-3d">
         <ul>
           <li>Working as a ERP System Operation Executive</li>
@@ -304,7 +343,7 @@
     <span>📍 Portfolio by Inas Imthiyas</span>
   </div>
 </div>
-
+<script src="whatsapp.js"></script>
 <script>
   // Create 3D background elements
   function create3DBgElements() {
