--- a/graphicpr.html
+++ b/graphicpr.html
@@ -2000,6 +2000,7 @@
   </div>
 </div>
 
+<script src="whatsapp.js"></script>
 <script>
   // Enhanced loading functionality with real-time network detection
   async function showPage() {
