--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
   }
   </script>
 
+  
+
   <!-- Existing CSS & Icons (unchanged) -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -66,7 +68,7 @@
 </div>
 
 <nav>
-  <a href="index.html">Home</a>
+  <a href="index.html" class="active">Home</a>
   <a href="education.html" >Education</a>
   <a href="experience.html">Experience</a>
   <a href="skills.html">Skills</a>
@@ -136,6 +138,7 @@
 </div>
 
 <!-- Your Original JavaScript (unchanged) -->
+ <script src="whatsapp.js"></script>
 <script>
   function create3DBgElements() {
     const bgContainer = document.getElementById('bg3dElements');
