--- a/My Projects.html
+++ b/My Projects.html
@@ -130,7 +130,7 @@
   <a href="experience.html">Experience</a>
   <a href="skills.html">Skills</a>
   <a href="contact.html">Contact</a>
-  <a href="My Projects.html">My Projects</a>
+  <a href="My Projects.html" class="active">My Projects</a>
  
 </nav>
 
@@ -214,6 +214,7 @@
   </div>
 </div>
 
+<script src="whatsapp.js"></script>
 <script>
   // Create 3D background elements
   function create3DBgElements() {
