--- a/education.html
+++ b/education.html
@@ -117,7 +117,7 @@
 
 <nav>
   <a href="index.html">Home</a>
-  <a href="education.html" >Education</a>
+  <a href="education.html" class="active" >Education</a>
   <a href="experience.html">Experience</a>
   <a href="skills.html">Skills</a>
   <a href="contact.html">Contact</a>
@@ -268,7 +268,7 @@
     <span>📍 Portfolio by Inas Imthiyas</span>
   </div>
 </div>
-
+<script src="whatsapp.js"></script>
 <script>
   // Create 3D background elements
   function create3DBgElements() {
