--- a/skills.html
+++ b/skills.html
@@ -122,10 +122,10 @@
   <a href="index.html">Home</a>
   <a href="education.html" >Education</a>
   <a href="experience.html">Experience</a>
-  <a href="skills.html">Skills</a>
+  <a href="skills.html" class="active">Skills</a>
   <a href="contact.html">Contact</a>
   <a href="My Projects.html">My Projects</a>
-  <a href="./AI chatbox.html" id="open-chat" >AI ChatBOX</a>
+<!--<a href="./AI chatbox.html" id="open-chat" >AI ChatBOX</a> -->
 </nav>
 
 <div class="container container-3d">
@@ -258,6 +258,7 @@
   </div>
 </div>
 
+<script src="whatsapp.js"></script>
 <script>
   // Create 3D background elements
   function create3DBgElements() {
